src/parser/serenity_parser/snapshots/serenity__parser__serenity_parser__test__parser@var a: int = 5;.snap
---
source: src/parser/serenity_parser/test.rs
expression: ast
---
[line    1] Var Declaration: a
[line    1] ╰───  Initializer
[line    1]      ╰─── Literal: 5
