src/parser/serenity_parser/snapshots/serenity__parser__serenity_parser__test__parser@x <= y;.snap
---
source: src/parser/serenity_parser/test.rs
expression: ast
---
[line    1] Expression: 
[line    1] ╰─── Binary: LessEqual
[line    1]      ├─── Variable: x
[line    1]      ╰─── Variable: y
